--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
 
-    <title>MyApp</title>
+    <title>B2CApp</title>
 
-    <!--
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
 
@@ -44,10 +43,9 @@
             //};
         };
     </script>
-    -->
 
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
-    <script id="microloader" data-app="1d014027-116c-4ee0-b711-f6d23a9e172d" type="text/javascript" src="bootstrap.js"></script>
+    <script id="microloader" data-app="89e0942a-ca57-4af9-ac95-62690c0bbde6" type="text/javascript" src="bootstrap.js"></script>
 
 </head>
 <body></body>
